# code-signing-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.example.json  production.json
docs/: DEMO_FLOW.md  DEPLOYMENT_GUIDE.md  MCP_TOOLS_PLAN.md
examples/: ai_value_proposition.md  quick_start_guide.md
examples/basic-usage/: claude_conversation.md
examples/ci-cd-integration/: github_actions.yml
examples/enterprise-deployment/: docker-compose.yml
src/: __init__.py  config.py  server.py
src/integrations/: __init__.py  c2pa_client.py  did_client.py  metadata_client.py
src/providers/: __init__.py  base.py  factory.py  local.py  noosphere.py  signpath.py  sigstore.py
src/security/: __init__.py  policy_engine.py
src/tools/: __init__.py  audit_trail.py  batch_sign.py  create_signing_request.py  get_certificate_info.py  github_integration.py  hsm_operations.py  manage_certificates.py  policy_validation.py  sign_binary.py  sign_package.py  supply_chain_attestation.py  verify_signature.py  verify_trust_chain.py
tests/: __init__.py  conftest.py  test_providers.py
