[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-signing-mcp"
version = "1.1.0"
description = "Multi-provider code signing for AI agents via MCP - supports Noosphere, SignPath, Sigstore, and local signing"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Noosphere Technologies", email = "engineering@noosphere.tech"}
]
maintainers = [
    {name = "Noosphere Technologies", email = "engineering@noosphere.tech"}
]
keywords = [
    "code-signing",
    "mcp",
    "ai-agents",
    "enterprise-security",
    "hsm",
    "certificates",
    "supply-chain",
    "slsa",
    "c2pa",
    "in-toto",
    "sigstore",
    "signpath",
    "noosphere",
    "did",
    "verifiable-credentials"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.8"
dependencies = [
    # MCP Server dependencies
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    
    # HTTP client for service integration
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    
    # Cryptography and signing
    "cryptography>=41.0.0",
    "pyOpenSSL>=23.0.0",
    "certifi>=2023.7.22",
    
    # HSM and PKCS#11 support
    "PyKCS11>=1.5.12",
    "python-pkcs11>=0.7.0",
    
    # Certificate and key management
    "pyasn1>=0.5.0",
    "pyasn1-modules>=0.3.0",
    
    # Supply chain security
    "in-toto>=2.0.0",
    "securesystemslib>=0.28.0",
    "sigstore>=2.0.0",
    
    # C2PA and content credentials
    "c2pa-python>=0.4.0",
    
    # Data validation and serialization
    "jsonschema>=4.17.0",
    "pyyaml>=6.0",
    
    # Utilities
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
    "packaging>=23.0",
    
    # Async support
    "asyncio-mqtt>=0.13.0",
    "anyio>=3.6.0",
    "aiofiles>=23.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]
enterprise = [
    # Enterprise HSM drivers
    "pycryptoki>=3.0.0",
    
    # Cloud KMS integrations
    "google-cloud-kms>=2.19.0",
    "azure-keyvault-keys>=4.8.0",
    "boto3>=1.26.0",
    
    # Enterprise monitoring
    "prometheus-client>=0.16.0",
    "opentelemetry-api>=1.18.0",
    "opentelemetry-sdk>=1.18.0",
    
    # Additional security
    "keyring>=24.0.0",
    "secretstorage>=3.3.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
    "mkdocstrings[python]>=0.22.0"
]

[project.urls]
Homepage = "https://github.com/noosphere-technologies/code-signing-mcp"
Documentation = "https://code-signing-mcp.noosphere.tech"
Repository = "https://github.com/noosphere-technologies/code-signing-mcp.git"
Issues = "https://github.com/noosphere-technologies/code-signing-mcp/issues"
Changelog = "https://github.com/noosphere-technologies/code-signing-mcp/blob/main/CHANGELOG.md"

[project.scripts]
code-signing-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
"src" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude build artifacts
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "PyKCS11.*",
    "pkcs11.*", 
    "c2pa.*",
    "in_toto.*",
    "securesystemslib.*",
    "sigstore.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=80"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "hsm: marks tests requiring HSM hardware",
    "enterprise: marks tests requiring enterprise features"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/examples/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]